# origin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  install.sh  package.json  pnpm-lock.yaml  release-please-config.json
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  release-please.yml  release.yml
app/: Cargo.toml  intelligence.baseline.toml  tauri.conf.json
app/capabilities/: default.json
app/eval/fixtures/: concept_retrieval.toml
app/src/: api.rs  events.rs  indexer.rs  lib.rs  lifecycle.rs  mcp_config.rs  search.rs  state.rs  tray_health.rs  updater.rs
app/src/ambient/: extract.rs  mod.rs  monitor.rs  types.rs
app/src/router/: bundle.rs  intent.rs
app/src/sensor/: vision.rs
app/src/sources/: mod.rs  sync.rs
app/src/trigger/: mod.rs  selection.rs  types.rs
app/tests/: eval_harness.rs
app/tests/manual/: tray-lifecycle.md
crates/origin-core/: Cargo.toml
crates/origin-core/src/: access_tracker.rs  activity.rs  briefing.rs  cache.rs  classify.rs  concepts.rs  config.rs  context_packager.rs  contradiction.rs  db.rs  decay.rs  engine.rs  error.rs  events.rs  extract.rs  importer.rs  kg_quality.rs  lib.rs  llm_classifier.rs  llm_provider.rs  memory_schema.rs  merge.rs  narrative.rs  onboarding.rs  post_ingest.rs  privacy.rs  quality_gate.rs  refinery.rs  rerank.rs  spaces.rs  system_info.rs  tags.rs  topic_match.rs  tuning.rs  working_memory.rs
crates/origin-core/tests/: chat_import_e2e.rs  distillation_quality.rs
crates/origin-server/: Cargo.toml
crates/origin-server/resources/: com.origin.server.plist
crates/origin-server/src/: cmd_backfill.rs  config_routes.rs  error.rs  import_routes.rs  ingest_batcher.rs  ingest_routes.rs  knowledge_routes.rs  main.rs  memory_routes.rs  onboarding_routes.rs  router.rs  (+5 more)
crates/origin-types/: Cargo.toml  README.md
docs/: README.md
docs/eval/: README.md  readme_metrics.example.json
docs/plans/: 2026-02-28-spaces-tags-redesign.md  2026-03-08-mcp-stdio-server-design.md  2026-03-08-memory-page-redesign.md  2026-03-10-profiles-agent-connections-design.md
scripts/: bump-version.sh  coverage.sh  download-sidecars.sh  entity_backfill.py  migrate-eval-cache.sh  setup-hooks.sh  update-all.sh  update-readme-eval.py
src/: App.tsx  main.tsx
src/components/: AmbientOverlay.tsx  IconOverlay.test.tsx  IconOverlay.tsx  SetupWizard.tsx  SnipOverlay.tsx
src/lib/: ambient.ts  tauri.test.ts  tauri.ts
(+72 files in other folders)
