[package]
name = "origin"
version = "0.1.2" # x-release-please-version
edition = "2021"
license = "AGPL-3.0-only"
default-run = "origin"

[lib]
name = "origin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
closed-core-eval = []
# Build the fixture_gen dev tool. Off by default so `pnpm tauri build`
# doesn't bundle it into Origin.app/Contents/MacOS (Tauri copies every
# crate binary). Enable with `--features fixture-gen` when running it.
fixture-gen = []

# Dev-only binary — gated behind `fixture-gen` so release builds skip
# it and cargo produces no artifact for Tauri to bundle.
[[bin]]
name = "fixture_gen"
path = "src/bin/fixture_gen.rs"
required-features = ["fixture-gen"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-x = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Dev-only: gives Claude Code / MCP clients control over the running app
# (screenshots, DOM, click/type). Excluded from release builds via debug_assertions.
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# File watching
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-full = "0.4"

# HTTP client for origin-server daemon
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }
tracing-appender = "0.2"
tracing = "0.1"
dirs = "6"
async-trait = "0.1"
futures = "0.3"
tempfile = "3"

# Screen capture
xcap = "0.8"
image = "0.25"
image-compare = "0.4"
serde_yaml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
raw-window-handle = "0.6"

# Workspace crates
origin-types = { workspace = true }
origin-core = { workspace = true }

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy", "closed-core-eval"))'] }
